<resources>
    <string-array name="notification_noise_interval_options_labels">
        <item>Never</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
    </string-array>
    <string name="action_report">Report</string>
    <string name="action_daily_report">Day</string>
    <string name="action_weekly_report">Week</string>
    <string name="action_monthly_report">Month</string>
    <string name="action_yearly_report">Year</string>
    <string name="action_chronicle">Chronicle</string>
    <string name="app_name">Agime</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_add_tracked">Add</string>
    <string name="action_track_activity">Record activity</string>
    <string name="action_tracktime_new">Record activity</string>
    <string name="action_tracktime_new_notification">Add</string>
    <string name="fragment_tracked_activities_empty_text">No activities recorded</string>
    <string name="activity_track_details">Details</string>
    <string name="track_activity_from_label">From</string>
    <string name="track_activity_to_label">To</string>
    <string name="accessibility_pick_start_time">Time of the activity start</string>
    <string name="accessibility_pick_end_time">Day of the activity</string>
    <string name="track_activity_name_label">Activity</string>
    <string name="track_activity_category_label">Category</string>
    <string name="track_activity_project_label">---</string>
    <string name="activity_category_default">Without category</string>
    <string name="activity_project_default">Without project</string>
    <string name="activity_no_day_default">---</string>
    <string name="activity_name_default">Without title</string>
    <string name="action_export_csv">Export as CSV</string>
    <string name="action_backup">Backup</string>
    <string name="error_backup_failed_export_dir">Can\'t create export directory</string>
    <string name="error_backup_failed_cleanup">Can\'t delete old export files</string>
    <string name="error_backup_failed_storage_not_writeable">Make sure that your SD-Card is inserted and your smartphone is not connected to a computer</string>
    <string name="error_backup_failed_storage_not_writeable_title">Can\'t write to external storage</string>
    <string name="fragment_activity_types_empty_text">No activity types</string>
    <string name="action_list_activities">Manage activity types</string>
    <string name="action_list_categories">Manage categories</string>
    <string name="action_list_projects">Manage projects</string>
    <string name="export_chooser">Export to&#8230;</string>
    <string name="action_edit_activity">Edit activity</string>
    <string name="fragment_project_management_empty_text">No projects available</string>
    <string name="action_edit_category">Edit category</string>
    <string name="action_edit_project">Edit project</string>
    <string name="fragment_category_management_empty_text">No categories available</string>
    <string name="new_category_title">New category</string>
    <string name="track_activity_existing_adjusted">Existing entries were adjusted</string>
    <string name="track_activity_new_adjusted">The new entry was split into multiple entries</string>
    <string name="settings_categories">Categories</string>
    <string name="settings_projects">Projects</string>
    <string name="settings_activity_type">Activity types</string>
    <string name="settings_group_management">Collected Data</string>
    <string name="settings_group_other">Other settings</string>
    <string name="settings_group_acquisition">Acquisition</string>
    <string name="activity_name_label">Name</string>
    <string name="activity_category_label">Category</string>
    <string name="category_name_label">Name</string>
    <string name="category_color_label">Color</string>
    <string name="project_name_label">Name</string>
    <string name="project_color_label">Color</string>
    <string name="action_restore">Restore Backup</string>
    <string name="action_restore_chooser">Restore from&#8230;</string>
    <string name="action_restore_confirm_title">Restore Backup</string>
    <string name="action_restore_confirm_message">Local data will be replaced with data from your Backup file</string>
    <string name="action_restore_confirm_ok">Continue</string>
    <string name="action_backup_restore">Backup / Restore</string>
    <string name="overview_level1_duration_sum_label">&#8721;</string>
    <string name="overview_level1_title_any">All activities</string>
    <string name="overview_level1_title_any_restricted_custom_field">Activities with: %1$s</string>
    <string name="track_activity_day_label">Date</string>
    <string name="action_acquisition_times">Times</string>
    <string name="acquisition_times_group_current_state">Current</string>
    <string name="acquisition_times_group_times">Acquisition times</string>
    <string name="acquisition_times_inactive_until">Inactive until</string>
    <string name="title_activity_recurring_acquisition_time_editor">Recurring acquisition time</string>
    <string name="automatic_acquisition_label">Acquisition time</string>
    <string name="backup_failure_notif_title">Backup failed</string>
    <string name="backup_failure_notif_details">Can\'t write to external storage</string>
    <string name="acquisition_times_current_label">Current</string>
    <string name="acquisition_times_current_active">Acquisition active until</string>
    <string name="acquisition_times_current_inactive">Acquisition inactive</string>
    <string name="acquisition_times_temporarily_disabled_title">Acquisition time inactive until:</string>
    <string name="action_tracktime_notification_settings">Settings</string>
    <string name="fragment_custom_field_types_label">Configure additional data</string>
    <string name="custom_field_type_name_label">Name</string>
    <string name="custom_field_type_name_hint">My Type of Data</string>
    <string name="custom_field_type_activity_label">Custom data</string>
    <string name="custom_field_value_name_label">Name</string>
    <string name="overview_group_types_project">Project</string>
    <string name="overview_group_types_activity_type">Activity</string>
    <string name="overview_group_types_category">Category</string>
    <string name="overview_level1_title_any_dropdown_value">---</string>
    <string name="custom_field_type_delete_title">Delete %1$s?</string>
    <string name="custom_field_type_delete_message">All values of \"%1$s\" will be deleted.</string>
    <plurals name="track_activity_delete_title">
        <item quantity="one">Delete entry?</item>
        <item quantity="other">Delete %d entries?</item>
    </plurals>
    <string name="track_activity_delete_message">Deleted items can\'t be restored</string>
    <string name="first_use_defaults_category_communication">Communication</string>
    <string name="first_use_defaults_category_break">Recreation</string>
    <string name="first_use_defaults_category_acquisition">Acquisition</string>
    <string name="first_use_defaults_category_selforganization">Self-organization</string>
    <string name="first_use_defaults_project_leisure">Leisure time</string>
    <string name="first_use_defaults_project_work">Work</string>
    <string name="first_use_defaults_activity_type_try_agime">Test Agime</string>
    <string name="first_use_defaults_activity_type_create_angebot">Create a proposal</string>
    <string name="first_use_defaults_activity_type_meeting">Meeting</string>
    <string name="first_use_defaults_activity_type_emails">E-mail</string>
    <string name="first_use_defaults_activity_type_phone">Phone</string>
    <string name="first_use_defaults_activity_type_coffee">Coffee break</string>
    <string name="first_use_defaults_activity_type_lunch">Lunch break</string>
    <string name="welcome_title">Welcome to Agime!</string>
    <string name="welcome_message"><b>When starting a new activity</b>, simply record whatever
        you have been doing <b>until this point</b> simply by adding a new entry!

        \n\nThat way, you create a complete <b>chronicle</b> of your activities.
\n\nYou do not want to record your activities 24 hours a day? No problem: simply go to Settings and set your individual time frame. 
Otherwise, Agime will automatically assume the following default start time for the first activity of your day: <b>weekdays starting at 09:00 a.m.</b>. 
    </string>
    <string name="action_first_item_of_day_heading">G\'day!</string>
    <string name="action_first_item_of_day_message">What have you been doing for the last &lt;b>%1$s minutes&lt;/b> since &lt;b>%2$s&lt;/b>?</string>
    <string name="action_first_item_of_day_message_acquisition_time_started">So what are you up to now? Acquisition time is active until &lt;b>%1$s&lt;/b>.</string>
    <string name="action_first_item_of_day_message_no_minutes">So what are you up to now?</string>
    <string name="action_first_item_of_day_start_acquisition_time">Start acquisition</string>
    <string name="action_first_item_of_day_start_acquisition_time_success">Acquisition time started</string>
    <string name="action_next_item_of_day_heading">What\'s new?</string>
    <string name="action_next_item_of_day_message">What have you been doing for the last &lt;b>%1$s minutes&lt;/b> since &lt;b>%3$s&lt;/b>?</string>
    <string name="action_next_item_of_day_message_no_title">What have you been doing for the last &lt;b>%1$s minutes&lt;/b> sinces &lt;b>%2$s&lt;/b>?</string>
    <string name="action_fresh_item_of_day_heading">All right!</string>
    <string name="action_fresh_item_of_day_message_with_previous_details">You needed &lt;b>%1$s&lt;/b> to record %3$s of &lt;b>%2$s&lt;/b></string>
    <string name="action_item_of_day_action">New activity</string>
    <string name="action_item_of_day_extend_previous_action"><![CDATA[Extend: %1$s]]></string>
    <string name="action_last_item_of_day_heading">All done!</string>
    <string name="action_last_item_of_today_message">Good job! You used a total of &lt;b>%1$s&lt;/b> to record your activities.</string>
    <string name="action_last_item_of_day_message"> &lt;b>%2$2.2f&lt;/b>%% of this time you have been recording your activities</string>
    <string name="action_faq">FAQ</string>
    <string name="settings_group_backup">Backup / Restore</string>
    <string name="pref_acquisition_time_notification">Notifications</string>
    <string name="pref_acquisition_time_notification_summary">During acquisition time</string>
    <string name="pref_acquisition_time_notification_summary_off">None</string>
    <string name="pref_backup_to_sd">External storage</string>
    <string name="pref_backup_to_sd_summary_off">No automatic Backup</string>
    <string name="pref_backup_to_dropbox">Dropbox</string>
    <string name="pref_backup_to_dropbox_summary">Automatic daily Backup</string>
    <string name="pref_backup_to_dropbox_summary_off">No automatic Backup</string>
    <string name="pref_backup_num_files">Maximum number of backup files</string>
    <string name="pref_backup_num_files_summary" >Store the %1$d newest daily backup files</string>
    <string name="settings_group_backup_more">More&#8230;</string>
    <string name="title_about">About Agime</string>
    <string name="pref_acquisition_time_notification_noise">Eye-Catching Notifications</string>
    <string name="pref_keep_screen_on">Keep Chronicle active</string>
    <string name="pref_keep_screen_on_summary">Screen will not be locked automatically while the device is charging</string>
    <string name="pref_keep_screen_on_summary_off">Screen will be locked according to system settings</string>
    <string name="overview_total">Total</string>
</resources>