<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:id="@+id/activity_type_head"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="0px"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".DisplayMessageActivity">

            <LinearLayout
                android:id="@+id/activity_name_row"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_marginTop="10dip"
                    android:layout_width="100sp"
                    android:text="@string/activity_name_label"
                    android:layout_height="wrap_content"
                    />
                <EditText
                    android:id="@+id/activity_type"
                    android:layout_marginTop="10dip"
                    android:layout_width="0px"
                    android:layout_weight="10"
                    android:hint="@string/track_activity_name_label"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete|textCapSentences"
                    android:layout_height="wrap_content"
                    android:nextFocusForward="@+id/activity_category"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_category_row"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dip">
                <TextView
                    android:layout_marginTop="10dip"
                    android:layout_width="100sp"
                    android:text="@string/activity_category_label"
                    android:layout_height="wrap_content"
                    />

                <de.kalass.android.common.widget.AutoCompleteSpinner
                    android:id="@+id/activity_category"
                    android:layout_marginTop="10dip"
                    android:layout_width="0px"
                    android:layout_weight="7"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/category_text_input"
                    android:textColorHint="@color/category_text_input_hint"
                    android:hint="@string/track_activity_category_label"
                    android:completionHint="@string/track_activity_category_label"
                    android:inputType="textAutoComplete|textCapSentences"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
</LinearLayout>
</ScrollView>