<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <!-- Your normal content view -->
    <!-- The main content view -->
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <FrameLayout
            android:id="@+id/fragment_container"

            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <!--?attr/colorPrimary-->
        <View
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/primary"
            android:elevation="4dp"
            />
        <androidx.appcompat.widget.Toolbar
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/agime_action_bar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:elevation="4dp"
            android:contentInsetStart="@dimen/toolbar_margin_start"
            android:contentInsetLeft="@dimen/toolbar_margin_start"
            app:contentInsetLeft="72dp"
            app:contentInsetStart="72dp"

            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />


        <FrameLayout android:id="@+id/custom_toolbar"
            android:elevation="4dp"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/toolbar_margin_start"
            android:paddingRight="16dp"

            android:layout_height="wrap_content">

        </FrameLayout>

    </FrameLayout>

    <!-- The navigation drawer -->
    <de.kalass.android.common.widget.ScrimInsetsFrameLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/left_drawer"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:elevation="10dp"
        android:fitsSystemWindows="true">

        <!-- Your drawer content -->
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/status_bar_height_if_overridable"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@color/primary"
                    android:layout_width="fill_parent"
                    android:paddingTop="32dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_height="96dp">
                    <TextView
                        android:id="@+id/drawer_header"
                        android:layout_width="fill_parent"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"

                        android:text="Agime"
                        android:textSize="@dimen/text_size_display_1_material"
                        android:layout_gravity="center_vertical"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/action_chronicle"
                    style="@style/ListItemDrawer"
                    android:text="@string/action_chronicle"
                    />

                <TextView
                    android:id="@+id/action_report"
                    style="@style/ListItemDrawer"
                    android:text="@string/action_report"
                    />

                <View style="@style/ListDivider" />
                <TextView
                    android:id="@+id/action_acquisition_times"
                    style="@style/ListItemDrawer"
                    android:text="@string/acquisition_times_group_times"
                    />

                <TextView
                    android:id="@+id/action_settings"
                    style="@style/ListItemDrawer"
                    android:text="@string/action_settings"
                    />

                <View style="@style/ListDivider" />
                <TextView
                    android:id="@+id/action_faq"
                    style="@style/ListItemDrawer"
                    android:text="@string/action_faq"
                    />
                <TextView
                    android:id="@+id/action_about"
                    style="@style/ListItemDrawer"
                    android:text="@string/title_about"
                    />

            </LinearLayout>

        </ScrollView>

    </de.kalass.android.common.widget.ScrimInsetsFrameLayout>

</androidx.drawerlayout.widget.DrawerLayout>