<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    android:paddingLeft="0px"
    android:paddingRight="0px"
    android:paddingTop="0px"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    
    tools:context=".DisplayMessageActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        android:id="@+id/project_color"
        >
        <TextView
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="match_parent"
            android:height="10dp" />
        <LinearLayout
            android:id="@+id/head"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:id="@+id/activity_name_row"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dip">
                <de.kalass.android.common.widget.AutoCompleteSpinner
                    android:id="@+id/activity_type"
                    android:layout_marginTop="10dip"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:selectAllOnFocus="true"
                    android:hint="@string/track_activity_name_label"
                    android:paddingLeft="16dp"
                    android:textColor="@color/category_text_input"
                    android:textColorHint="@color/category_text_input_hint"

                    android:shadowColor="@android:color/transparent"
                    android:imeOptions="actionNext"
                    android:dropDownAnchor="@id/activity_name_row"
                    android:inputType="textAutoComplete|textCapSentences"
                    android:layout_height="wrap_content"
                    android:nextFocusForward="@+id/activity_project"
                    />
                <de.kalass.android.common.widget.AutoCompleteSpinner
                    android:id="@+id/activity_project"
                    android:layout_marginTop="10dip"
                    android:layout_width="0px"
                    android:layout_weight="4"
                    android:selectAllOnFocus="true"
                    android:gravity="end|center_vertical"
                    android:paddingRight="16dp"
                    android:hint="@string/track_activity_project_label"
                    android:textColor="@color/category_text_input"
                    android:textColorHint="@color/category_text_input_hint"
                    android:inputType="textAutoComplete|textCapSentences"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="match_parent"
            android:height="10dp" />
    </LinearLayout>

    <com.linearlistview.LinearListView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/custom_fields_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:showDividers="none"
        android:divider="@drawable/separator"
        android:dividerPadding="0dp"
        app:dividerThickness="0dp"
        />

    <LinearLayout
        android:id="@+id/body"
        android:orientation="vertical"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="64dip">



        <LinearLayout
            android:id="@+id/from_row"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="64dip"
            >
            <TextView
                android:id="@+id/from_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/track_activity_from_label"
                android:layout_gravity="center_vertical"
                android:minWidth="60sp"
                android:textColor="#999"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                 />
            <de.kalass.android.common.widget.KKSpinner
                android:id="@+id/start_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:layout_gravity="center_vertical"
                style="@style/TextAppearance.EditEvent_SpinnerButton"
                android:contentDescription="@string/accessibility_pick_start_time"
                />
        </LinearLayout>



        <!-- TO - Read/write version which launches the date/time pickers -->
        <LinearLayout
            android:id="@+id/to_row"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="64dp"
            >
            <TextView
                android:id="@+id/to_label"
                android:text="@string/track_activity_to_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#999"
                android:minWidth="60sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                />

                <de.kalass.android.common.widget.KKSpinner
                    android:id="@+id/end_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:layout_gravity="center_vertical"
                    style="@style/TextAppearance.EditEvent_SpinnerButton"
                    android:contentDescription="@string/accessibility_pick_end_time"
                     />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/day_row"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="64dip">
            <TextView
                android:id="@+id/day_label"
                android:text="@string/track_activity_day_label"
                android:textColor="#999"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:minWidth="60sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                />
            <Button
                android:id="@+id/day_input_start"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:text="Heute"

                style="@style/TextAppearance.EditEvent_SpinnerButton"
                 />
            <TextView
                android:id="@+id/day_input_divider"
                android:layout_width="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:layout_height="fill_parent"
                android:text="-"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>
            <Button
                android:id="@+id/day_input"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:text="Heute"
                android:contentDescription="@string/accessibility_pick_start_time"
                style="@style/TextAppearance.EditEvent_SpinnerButton"
                />
        </LinearLayout>
        <EditText
            android:id="@+id/activity_track_details"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/activity_track_details"
            android:inputType="textMultiLine|textCapSentences"
            />
    </LinearLayout>

</LinearLayout>
</ScrollView>